k8s/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: messaging
  labels:
    name: messaging
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    name: monitoring
